--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res-console.cloudinary.com/dmh5zjb5c/thumbnails/v1/image/upload/v1680598139/bG9nb19kMmRoMWk=/as_is"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>HBook</title>
   </head>
   <body>
     <div id="root"></div>
